Replace some libraries with Maven